--- a/style.css
+++ b/style.css
@@ -6,14 +6,20 @@ body{
     background: url(car1.jpg);
     color: white;
     background-repeat: no-repeat;
-    /* height: 4400px; */
+    font-family: 'Baloo Bhai 2', cursive;
 }
 
 .left{
     display: inline-block;
     position: absolute;
+    margin: auto;
+    left: 40px;
 }
-
+.left div{
+    font-size: 25px;
+    text-align: center;
+    font-weight: bolder;
+} 
 .right{
     display: inline-block;
     position: absolute;
@@ -25,10 +31,11 @@ body{
     border-radius: 15px;
     /* position: fixed; */
     display: block;
-    width: 40%;
+    width: 60%;
     margin: auto;
-    background: rgba(162, 161, 161, 0.815);
-    backdrop-filter: blur(0px);
+    
+    /* background: rgba(162, 161, 161, 0.815); */
+    /* backdrop-filter: blur(0px); */
 }
 
 .navbar ul{
@@ -42,8 +49,8 @@ body{
 }
 
 .navbar li a{
-    font-size: 26px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     padding: 3px 3px;
     text-decoration: none;
     color: white;
@@ -54,6 +61,54 @@ body{
     color: purple;
 }
 
+.btn{
+    margin: 10px 5px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid white;
+    color: white;
+    background-color: black;
+    font-size: 20px;
+    cursor: pointer;
+    font-family: 'Baloo Bhai 2', cursive;
+}
+
+.btn:hover{
+    background-color: grey;
+    text-decoration:solid;
+    font-weight: bolder;
+    font-family: 'Baloo Bhai 2', cursive;
+}
+
+.container{
+    border: 2px solid white;
+    border-radius: 10px;
+    width:40%;
+    margin:200px 100px;
+    padding: 70px 70px;
+}
+
+.container h1{
+    text-align: center;
+}
+
+.form-grp input{
+    text-align:center;
+    display: block;
+    width: 500px;
+    padding: 1px;
+    border: 2px solid black;
+    border-radius: 8px;
+    font-size: 25px;
+    margin: 11px auto;
+    font-family: 'Baloo Bhai 2', cursive;
+}
+
+.container button{
+    display: block;
+    width: 20%;
+    margin: 20px auto;
+}
 
 .m img{
     /* border: 2px solid red; */
