--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body{
     margin: auto;
     left: 40px;
 }
+.left img{
+    display: block;
+    width: 40%;
+    margin:auto;
+}
 .left div{
     font-size: 25px;
     text-align: center;
@@ -76,7 +81,6 @@ body{
 .btn:hover{
     background-color: grey;
     text-decoration:solid;
-    font-weight: bolder;
     font-family: 'Baloo Bhai 2', cursive;
 }
 
@@ -104,10 +108,9 @@ body{
     font-family: 'Baloo Bhai 2', cursive;
 }
 
-.container button{
-    display: block;
-    width: 20%;
-    margin: 20px auto;
+.button{
+    width: 50%;
+    margin:20px 200px;
 }
 
 .m img{
